changed implementation of text truncate, fixed button inaccurate styles, changed modal layout to one column

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -7,6 +7,8 @@
     border-radius: 65px;
     color: $color-white;
     font-family: $font-family;
+    font-weight: unset;
+    line-height: unset;
     padding: 0.8rem 2.4rem;
     text-transform: uppercase;
 
@@ -30,7 +32,7 @@
 
     &--medium {
         font-size: $font-size-12;
-        padding: 0.8rem 1.6rem;
+        padding: 0.9rem 1.8rem;
     }
 
     &--icon-x {
