--- a/src/features/reviewsSection/reviewCard.scss
+++ b/src/features/reviewsSection/reviewCard.scss
@@ -1,4 +1,5 @@
 @import '../../styles/base/base';
+@import '../../styles/mixins/mixins';
 
 $_review-line-heigh: 1.5;
 $_color-black-transp: rgba(255, 255, 255, 0);
@@ -30,36 +31,12 @@ $_color-black-transp: rgba(255, 255, 255, 0);
         margin: 0.6rem 2rem 1.6rem;
 
         &--truncate {
-            max-height: 10.5rem;
+            /* stylelint-disable */
+            -webkit-box-orient: vertical;
+            display: -webkit-box;
+            /* stylelint-enable */
+            -webkit-line-clamp: 5;
             overflow: hidden;
-            position: relative;
-
-            &::before {
-                background: linear-gradient(
-                    to right,
-                    $_color-black-transp,
-                    $color-white 50%
-                );
-                content: '';
-                height: 2rem;
-                inset-block-end: 0;
-                inset-inline-end: 0;
-                position: absolute;
-                width: 8rem;
-            }
-
-            &::after {
-                background: linear-gradient(
-                    to right,
-                    $_color-black-transp,
-                    $color-white 50%
-                );
-                content: '';
-                height: 2rem;
-                inset-inline-end: 0;
-                position: absolute;
-                width: 8rem;
-            }
         }
     }
 
